--- a/pom.xml
+++ b/pom.xml
@@ -18,10 +18,15 @@
     </modules>
 	<distributionManagement>
 		<repository>
-			<id>internal.repo</id>
-			<name>Internal Repository</name>
-			<url>${internal.repo.path}</url>
+			<id>newton</id>
+			<name>newton-releases</name>
+			<url>http://newton.htw-saarland.de:8085/artifactory/ext-release-local</url>
 		</repository>
+		<snapshotRepository>
+			<id>newton</id>
+			<name>newton-snapshots</name>
+			<url>http://newton.htw-saarland.de:8085/artifactory/ext-snapshot-local</url>
+		</snapshotRepository>
 	</distributionManagement>
 	<build>
         <pluginManagement>
