temprary change distribution-url to markov

--- a/pom.xml
+++ b/pom.xml
@@ -20,12 +20,12 @@
 		<repository>
 			<id>newton</id>
 			<name>newton-releases</name>
-			<url>http://newton.htw-saarland.de:8085/artifactory/ext-release-local</url>
+			<url>http://markov.htwsaar.de/artifactory/libs-release-local</url>
 		</repository>
 		<snapshotRepository>
 			<id>newton</id>
 			<name>newton-snapshots</name>
-			<url>http://newton.htw-saarland.de:8085/artifactory/ext-snapshot-local</url>
+			<url>http://markov.htwsaar.de/artifactory/libs-snapshot-local</url>
 		</snapshotRepository>
 	</distributionManagement>
 	<build>
