--- a/pom.xml
+++ b/pom.xml
@@ -20,12 +20,12 @@
 		<repository>
 			<id>newton</id>
 			<name>newton-releases</name>
-			<url>http://markov.htwsaar.de/artifactory/libs-release-local</url>
+			<url>http://newton.htwsaar.de/artifactory/libs-release-local</url>
 		</repository>
 		<snapshotRepository>
 			<id>newton</id>
 			<name>newton-snapshots</name>
-			<url>http://markov.htwsaar.de/artifactory/libs-snapshot-local</url>
+			<url>http://newton.htwsaar.de/artifactory/libs-snapshot-local</url>
 		</snapshotRepository>
 	</distributionManagement>
 	<build>
