--- a/sablecc-maven-plugin/pom.xml
+++ b/sablecc-maven-plugin/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.github.verylazyboy</groupId>
     <artifactId>sablecc-maven-plugin</artifactId>
-    <version>2.0-beta.5</version>
+    <version>2.0-beta.6-SNAPSHOT</version>
 	
     <name>sablecc-maven-plugin</name>
     <description>
@@ -107,7 +107,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-plugin-plugin</artifactId>
-                <version>3.2</version>
+                <version>3.5</version>
                 <configuration>
                     <!-- see http://jira.codehaus.org/browse/MNG-5346 -->
                     <skipErrorNoDescriptorsFound>true</skipErrorNoDescriptorsFound>
@@ -128,12 +128,6 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-            </plugin>
-					
         </plugins>
     </build>
   
@@ -174,8 +168,9 @@
         <dependency>
             <groupId>com.github.verylazyboy</groupId>
             <artifactId>sablecc-maven-port</artifactId>
-            <version>3.7</version>
+            <version>[3.7,)</version>
             <type>jar</type>
+			<scope>provided</scope>
         </dependency>
 		
         <dependency>
