--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     
 	<groupId>com.github.verylazyboy</groupId>
 	<artifactId>sablecc-plugin-test-parent</artifactId>
-	<version>2.0-beta.5</version>
+	<version>2.0-beta.6-SNAPSHOT</version>
     <name>sablecc-plugin-test-parent</name>
     <packaging>pom</packaging>
 
